src/objects/Gift__c.object
<CustomObject>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <defaultValue>&quot;$User.Business_Unit__c &quot;</defaultValue>
        <label>Business Unit</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Business_Units</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_Shipped_if_applicable__c</fullName>
        <label>Date Shipped (if applicable)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Gift__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Date of Gift</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description_and_Reason__c</fullName>
        <label>Description and Reason</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Gift_Value__c</fullName>
        <label>Gift Value</label>
        <precision>6</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Giver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Giver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Gifts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Manager_Email__c</fullName>
        <label>Manager Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Recipient__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Gifts</relationshipLabel>
        <relationshipName>Gifts</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ship_to_if_applicable__c</fullName>
        <label>Ship To (if applicable)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Giver Home Address</fullName>
                </value>
                <value>
                    <fullName>Giver Office Address</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Shipping_Address__c</fullName>
        <formula>Recipient__r.Contact_Name__c &amp; BR() &amp; 
Recipient__r.Account.Name  &amp; BR() &amp;   
Recipient__r.Account.BillingStreet  &amp; BR() &amp;  
Recipient__r.Account.BillingCity &amp; &quot;, &quot; &amp; Recipient__r.Account.BillingState &amp; &quot; &quot; &amp; Recipient__r.Account.BillingPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Shipping Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Denied</fullName>
                </value>
                <value>
                    <fullName>Pending Approval</fullName>
                    <default>true</default>
                    <label>Pending Approval</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Giftcard</fullName>
                    <label>Gift Card</label>
                </value>
                <value>
                    <fullName>Event Tickets</fullName>
                </value>
                <value>
                    <fullName>Other (specify in description)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Gift</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Date_of_Gift__c</columns>
        <columns>Giver__c</columns>
        <columns>Business_Unit__c</columns>
        <columns>Gift_Value__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Gift {0000}</displayFormat>
        <label>Gift ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Gifts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Approval_Restricted_to_Admins</fullName>
        <active>true</active>
        <errorConditionFormula>ISCHANGED( Status__c )
&amp;&amp; 
NOT(
$User.Username = &quot;aaron.brown@lexitas.sf&quot;  || 
$User.Username = &quot;kayla.lambert@lexitas.sf&quot;  || 
$User.Username = &quot;chad.davenport@lexitaslegal.com&quot;  || 
$User.Username = &quot;kvarallo@nextgenreporting.com&quot; 
)</errorConditionFormula>
        <errorDisplayField>Status__c</errorDisplayField>
        <errorMessage>Gifts can only be approved by Aaron, Chad, Ken or Kayla.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Description_Required</fullName>
        <active>true</active>
        <errorConditionFormula>isblank( Description_and_Reason__c)</errorConditionFormula>
        <errorDisplayField>Description_and_Reason__c</errorDisplayField>
        <errorMessage>Please explain the reason for this gift.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Giver_Required</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK(Giver__c)</errorConditionFormula>
        <errorDisplayField>Giver__c</errorDisplayField>
        <errorMessage>Who is requesting this gift?</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>New_Gift_Preapproved</fullName>
        <active>true</active>
        <errorConditionFormula>ISNEW() &amp;&amp; NOT(ISPICKVAL(Status__c, &quot;Pending Approval&quot;))
&amp;&amp;
NOT(
$User.Username = &quot;aaron.brown@lexitas.sf&quot; ||
$User.Username = &quot;kayla.lambert@lexitas.sf&quot; ||
$User.Username = &quot;chad.davenport@lexitaslegal.com&quot; ||
$User.Username = &quot;kvarallo@nextgenreporting.com&quot;
)</errorConditionFormula>
        <errorDisplayField>Status__c</errorDisplayField>
        <errorMessage>Gifts can only be approved by Aaron, Chad, Ken or Kayla.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Ship_Date_Restricted_to_Admins</fullName>
        <active>true</active>
        <errorConditionFormula>(ISNEW() &amp;&amp; NOT(ISBLANK(Date_Shipped_if_applicable__c))
||
ISCHANGED( Date_Shipped_if_applicable__c ))
&amp;&amp; 
NOT(
$User.Username = &quot;aaron.brown@lexitas.sf&quot;  || 
$User.Username = &quot;kayla.lambert@lexitas.sf&quot;  || 
$User.Username = &quot;chad.davenport@lexitaslegal.com&quot;  || 
$User.Username = &quot;kvarallo@nextgenreporting.com&quot; 
)</errorConditionFormula>
        <errorDisplayField>Date_Shipped_if_applicable__c</errorDisplayField>
        <errorMessage>Only Aaron, Chad, Ken or Kayla can update the ship date</errorMessage>
    </validationRules>
</CustomObject>